syntax = "proto3";
package message;
option go_package = "./";

message custom_Block {
    optional uint32 row = 1;
    optional uint32 column = 2;
}

message custom_AwardReel {
    optional uint32 line = 1;
    repeated custom_Block block = 2;
    optional int64 win = 3;
    optional uint32 dir = 4;
    optional int32 symbol = 5;
}

message custom_Plate {
    repeated custom_Row column = 1;
    repeated custom_AwardReel award = 2;
    optional int64 win = 3;
    optional bool isBonus = 4;
    optional int64 diamondBonus = 5;
    optional uint32 diamondCount = 6;
    optional uint32 diamondStamp = 7;
    optional uint32 awardStamp = 8;
}

message custom_Row {
    repeated int32 row = 1;
}

message custom_AllPlate {
    repeated custom_Plate plate = 1;
}

message custom_ColumnData {
    repeated int32 row = 1;
}

